Fix: Icons stretching in Firefox

--- a/src/adapters/github.less
+++ b/src/adapters/github.less
@@ -223,7 +223,7 @@
 
         .jstree-icon {
           width: 16px;
-          flex-shrink: 0;
+          flex: 0 0 auto;
         }
 
         .jstree-icon,
